--- a/public/assets/css/home-style.css
+++ b/public/assets/css/home-style.css
@@ -76,6 +76,7 @@ body,
     font-size: 2em;
     letter-spacing: 5px;
     font-weight: 500;
+    text-shadow: 10px 10px 20px 0 rgba(0, 0, 0, 0.8);
 }
 
 #card {
