--- a/public/assets/css/home-style.css
+++ b/public/assets/css/home-style.css
@@ -138,3 +138,9 @@ body,
     z-index: 1;
     margin-top: 30px;
 }
+#pesquisa{
+    box-shadow: 20px 20px 25px 0 rgba(0, 0, 0, 0.2);
+    padding:8px;
+    border-radius:24px;
+    backdrop-filter: blur(15px);
+}
