--- a/public/assets/css/home-style.css
+++ b/public/assets/css/home-style.css
@@ -62,6 +62,7 @@ body,
 #bodyContent{
     box-shadow: 20px 20px 50px 0 rgba(0, 0, 0, 0.4);
     margin-bottom: 30px;
+    height:700px;
 }
 #hometitulo{   
     margin-top: 35px;
@@ -143,4 +144,18 @@ body,
     padding:8px;
     border-radius:24px;
     backdrop-filter: blur(15px);
+}
+footer{
+    margin:0;
+    padding:0;
+    font-family: Segoe UI;
+    font-weight: 400;
+    background-color:#ededed;
+}
+.footer{
+    padding: 20px 0;
+}
+.footer .copyright{
+    text-align: center;
+    color: #aaaa;
 }
